# d-quant

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json  pipeline_config.json
assets/analysis/dynamizer/crescendo/: envelope1.csv  envelope16.csv  envelope17.csv  envelope19.csv  envelope3.csv  envelope8.csv  envelope9.csv
assets/breath_csv/: breath_cc_example.csv
assets/envelopes_csv/: envelope11.csv  envelope12.csv  envelope18.csv  envelope20.csv  envelope21.csv  envelope26.csv  envelope30.csv
assets/generation/dynamizer/crescendo/: generated_morph2_17.csv  generated_morph2_20.csv  generated_morph2_22.csv  generated_morph2_28.csv  generated_morph2_29.csv  generated_morph2_30.csv  generated_morph2_35.csv  generated_morph2_36.csv  generated_morph2_38.csv  generated_morph2_43.csv  generated_morph2_44.csv  generated_morph2_45.csv  generated_morph2_47.csv  generated_morph2_48.csv  generated_morph2_51.csv  generated_morph2_52.csv  generated_morph2_53.csv  generated_morph2_61.csv  generated_morph2_67.csv  generated_morph2_68.csv  generated_morph2_73.csv  generated_morph2_76.csv  generated_morph2_80.csv  generated_morph2_83.csv  generated_morph2_89.csv  generated_morph2_94.csv  generated_morph2_96.csv
assets/generation/dynamizer/diminuendo/: generated_morph2_100.csv  generated_morph2_11.csv  generated_morph2_13.csv  generated_morph2_14.csv  generated_morph2_16.csv  generated_morph2_18.csv  generated_morph2_19.csv  generated_morph2_23.csv  generated_morph2_25.csv  generated_morph2_27.csv  generated_morph2_29.csv  generated_morph2_3.csv  generated_morph2_36.csv  generated_morph2_37.csv  generated_morph2_40.csv  generated_morph2_41.csv  generated_morph2_43.csv  generated_morph2_44.csv  generated_morph2_45.csv  generated_morph2_46.csv  generated_morph2_49.csv  generated_morph2_5.csv  generated_morph2_50.csv  generated_morph2_51.csv  generated_morph2_8.csv  (+20 more)
assets/midi/: Dynamizer_Training_CRE_pp_to_ff_0001.midi  Dynamizer_Training_DIM_ff_to_pp_0001.midi  Dynamizer_Training_FLAT_0001.midi  Rhythmizer_Training_ORD_04Nx48_0001.midi
assets/morph_csv/: generated_morph2_1.csv  generated_morph2_10.csv  generated_morph2_100.csv  generated_morph2_11.csv  generated_morph2_12.csv  generated_morph2_13.csv  generated_morph2_14.csv  generated_morph2_15.csv  generated_morph2_16.csv  generated_morph2_17.csv  generated_morph2_18.csv  generated_morph2_19.csv  generated_morph2_2.csv  generated_morph2_20.csv  generated_morph2_21.csv  generated_morph2_22.csv  generated_morph2_23.csv  generated_morph2_24.csv  generated_morph2_25.csv  generated_morph2_26.csv  generated_morph2_27.csv  generated_morph2_28.csv  generated_morph2_29.csv  generated_morph2_3.csv  generated_morph2_30.csv  generated_morph2_31.csv  generated_morph2_32.csv  generated_morph2_33.csv  generated_morph2_34.csv  generated_morph2_35.csv  generated_morph2_36.csv  generated_morph2_37.csv  generated_morph2_38.csv  generated_morph2_39.csv  generated_morph2_4.csv  generated_morph2_40.csv  generated_morph2_41.csv  generated_morph2_42.csv  generated_morph2_43.csv  generated_morph2_44.csv  (+60 more)
assets/output_csv/: envelope13.csv  envelope14.csv  envelope15.csv  envelope2.csv  envelope22.csv  envelope23.csv  envelope25.csv  envelope27.csv  envelope29.csv  envelope31.csv  envelope4.csv  envelope6.csv  envelope7.csv  rhythm_deviation.csv
d-quant-vs/: CMakeLists.txt
src/core/: AnalysisHelpers.cpp  AnalysisHelpers.h  CMakeLists.txt  ExpressionMarks.h  MidiFileReader_v2.cpp  MidiFileReader_v2.h  MidiFileWriter.cpp  MidiFileWriter.h  MidiTrackParser.cpp  MidiTrackParser.h  Note.h  NoteBuilder.cpp  NoteBuilder.h  NotePerformanceAnalysis.h  PathRegistry.cpp  PathRegistry.h  PathUtils.h  PipelineArgs.h  PipelineArgsRegistry.cpp  PipelineArgsRegistry.h  PipelineConfigLoader.cpp  PipelineConfigLoader.h  Point.h  RandomCsvFileSelector.h  midi_parser.cpp  midi_parser.h
src/dynamizer/: CMakeLists.txt  EnvelopeUtils.cpp  EnvelopeUtils.h  ExpressionGenerator.cpp  ExpressionGenerator.h  ExpressionMarks.cpp  ExpressionMarks.h  dynamizer.cpp  dynamizer.h
src/intonizer/: CMakeLists.txt  IntonationGenerator.cpp  IntonationGenerator.h  intonizer.cpp  intonizer.h
src/main/: CMakeLists.txt  CliParser.cpp  CliParser.h  ControllerParser.h  JsonConfigLoader.cpp  JsonConfigLoader.h  MidiArgs.h  SingleNoteGenerator.cpp  SingleNoteGenerator.h  main.cpp
src/phrase_cli/: CMakeLists.txt  CsvWriters.cpp  CsvWriters.h  MidiEvent.h  MidiPhraseBuilder.cpp  MidiPhraseBuilder.h  NoteArgs.h  PhraseArgs.h  PhraseJsonParser.cpp  PhraseJsonParser.h  PhraseRenderer.cpp  PhraseRenderer.h  RenderOptions.h  SongContext.h  SongContextLoader.cpp  SongContextLoader.h  main.cpp
src/rhythmizer/: CMakeLists.txt  RhythmAnalysis.cpp  RhythmAnalysis.h  Rhythmizer_Analysis.cpp  rhythmizer.cpp  rhythmizer.h
tests/regression/: CMakeLists.txt  main.cpp  test_apply_timing.cpp  test_breath_cc_generation.cpp  test_data_utils.h  test_expressive_note.cpp  test_midi_to_envelope_csv.cpp  test_morph2_generation.cpp  test_rhythmizer_csv.cpp
tests/test_output/breath_cc/: breath_cc_test.csv
tests/unit/: CMakeLists.txt  main.cpp  test_cli_parser.cpp  test_core.cpp  test_csv_io.cpp  test_envelope_morphing.cpp  test_json_config.cpp  test_notebuilder.cpp
tools/analyze_dynamics/: CMakeLists.txt  main.cpp
tools/analyze_rhythm/: CMakeLists.txt  main.cpp
(+15 files in other folders)
